# STM32-GNU-CMake-VSCode

./: .gitignore  CMakeLists.txt  README.rst  stm32-gnu-cmake.code-workspace
Src/: gpio.c  main.cpp  sys.c
cmake/: toolchain.cmake  utils.cmake
scripts/: clean-project.ps1  cmake-debug.ps1  cmake-release.ps1  gdb-server.ps1
